--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-pluginGroup=simplediscord
-pluginId=simplediscord
-pluginVersion=1.3.0
+pluginGroup=slashdiscord
+pluginId=slashdiscord
+pluginVersion=1.3.2
