--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'net.dirtcraft.julian'
-version '1.3.4'
+version '1.4.0'
 
 repositories {
     mavenCentral()
@@ -15,5 +15,5 @@ repositories {
 }
 
 dependencies {
-    compileOnly group: 'org.spongepowered', name: 'spongeapi', version:'7.1.0'
+    compile 'org.spongepowered:spongeapi:7.1.0-SNAPSHOT'
 }
